[metadata]
name = pulumi-local
version = 1.3.0
url = https://github.com/localstack/pulumi-local
author = LocalStack Team
author_email = info@localstack.cloud
description = Thin wrapper script to use Pulumi with LocalStack
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing

[options]
zip_safe = False
scripts =
    bin/pulumilocal
    bin/pulumilocal.bat
packages = find:

[options.extras_require]
test =
    flake8
    localstack
    pytest
    boto3
